// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTime allows for DATE_ONLY formatting 1`] = `
<time
  dateTime="2020-04-09T16:17:18.912Z"
>
  9 Apr 2020
</time>
`;

exports[`DateTime allows for FULL formatting 1`] = `
<time
  dateTime="2020-04-09T16:17:18.912Z"
>
  9 Apr 2020 at 9:17 am
</time>
`;

exports[`DateTime allows for TIME_ONLY formatting 1`] = `
<time
  dateTime="2020-04-09T16:17:18.912Z"
>
  9:17 am
</time>
`;

exports[`DateTime allows for WEEKDAY_DATE formatting 1`] = `
<time
  dateTime="2020-04-09T16:17:18.912Z"
>
  Thu, 9 Apr
</time>
`;

exports[`DateTime renders the component 1`] = `
<time
  className="custom--className"
  data-test-id="custom-testId"
  dateTime="2020-04-09T16:17:18.912Z"
>
  9 Apr 2020 at 9:17 am
</time>
`;
